<resources>
    <string name="app_name">bwa-mov</string>
    <string name="splash_description">Splash Description</string>

    <string name="skip">SKIP</string>
    <string name="next">CONTINUE</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui \nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sales</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan \nupdate film terbaru</string>
    <string name="cashless">CASHLESS</string>
    <string name="pre_cashless_desc">Gunakan E-walet untuk \ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here!</string>
    <string name="back">Back</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome, \nEdho Dwi</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="edho_dwi">Edho Dwi</string>
    <string name="idr_240_000">IDR 240.000</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="movie_poster_avenger">Movie Poster Avenger</string>
    <string name="avengers_infinity_war">Avengers: Infinity War</string>
    <string name="_2018_laga_fiksi_ilmiah">2018 ‧ Laga/Fiksi ilmiah</string>
    <string name="storyboard_avengers_infinity_war">The Avengers dan sekutu mereka harus bersedia mengorbankan segalanya dalam upaya untuk mengalahkan Thanos yang kuat sebelum ia berhasil menghancurkan alam semesta.</string>
    <string name="storyboard">Storyboard</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="who_s_played">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="empty">Empty</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="pay_now">Pay Now</string>
    <string name="cancel">Cancel</string>
    <string name="when">When</string>
    <string name="date_and_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="_10_aug_10am">10 Aug, 10Am</string>
    <string name="depok_mall_cinema_3">Depok Mall, Cinema 3</string>
    <string name="idr_70_000">IDR 70.000</string>
    <string name="seat_no_c2">Seat No C2</string>
    <string name="seat_no_c1">Seat No C1</string>
    <string name="items">Items</string>
    <string name="total_price">Total Price</string>
    <string name="idr_140_000">IDR 140.000</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="idr_200_000">IDR 200.000</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_new_data">Save New Data</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_history">My History</string>
</resources>